Clean up Eclipse/Android lint warnings.